fix: add Lombok to Xinco module and seed H2 test database from classpath
- Add Lombok provided dependency and annotationProcessorPaths to Xinco/pom.xml
  so OpenRewrite-generated @Getter/@Setter annotations compile in the legacy module
- Fix AccessLevel.PRIVATEATE typo → PRIVATE in ArchiveDialog.java and add
  missing AccessLevel import
- Fall back to classpath V1_1__Base_Version.sql seeding in XincoDBManager when
  FLYWAY_LOCATIONS is not set; strip MySQL backtick quoting so the SQL runs on H2
  in standard mode — fixes "Unable to find setting: xinco/FileRepositoryPath"
  failure in all AbstractXincoDataBaseTestCase-based tests
- Apply remaining OpenRewrite cleanups: isEmpty(), getFirst(), enhanced for-loop,
  remove unreachable FileNotFoundException catches

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>